--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <main>
         <section class="section">
-            <h1>PORTFOLIO</h1>
+            <h1>PORTOFOLIO</h1>
             <p>
                 Halo! nama saya Ibrahim Ibnu Abbas,saya seorang siswa SMA IT HSI
                 boarding school yang bersemangat dalam memecahkan masalah melalui
@@ -102,7 +102,7 @@
             </div>
         </section>
         <section id="kontak" class="section3">
-            <h2>Mari Terhubung</h2>
+            <h2>Mari Terhubung!</h2>
             <p>If you want to contact me further or just want to chat, you can contact me here</p>
             <ul>
                 <li><a href="+62 895 1945 5205"><i class="ph ph-whatsapp-logo"></i></a></li>
