--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
                     <h2 class="title">Tentang Saya</h2>
                     <p>
                         Saya adalah seorang siswa SMA yang tertarik pada dunia teknologi dan
-                        pemrograman. Saya mulai belajar coding secara otodidak dan semakin
-                        menyukainya setiap hari. Saya ingin terus mengembangkan kemampuan
+                        pemrograman.Saya ingin terus mengembangkan kemampuan
                         saya dan membangun proyek-proyek yang dapat menunjukkan perkembangan
                         skill saya dari waktu ke waktu.
                     </p>
@@ -97,7 +96,6 @@
         </section>
         <section id="project" class="project-section">
             <h2 class="project-title">Proyek</h2>
-
             <div id="proyek" class="project-container">
             </div>
         </section>
