--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                 </div>
             </div>
         </section>
-        <section id="keunggulan" class="features-section1">
+        <section id="keunggulan" class="features-section">
             <div class="container">
                 <h2 class="title">Keunggulan</h2>
-                <div class="features-grid">
+                <div class="features-flex">
                     <div class="feature-card">
                         <img src="icon html.png" alt="icon html" class="feature-icon" />
                         <h3>HTML</h3>
@@ -99,8 +99,8 @@
             <div id="proyek" class="project-container">
             </div>
         </section>
-        <section id="kontak" class="section3">
-            <h2>Mari Terhubung!</h2>
+        <section id="kontak" class="section2">
+            <h2>Kontak</h2>
             <p>If you want to contact me further or just want to chat, you can contact me here</p>
             <ul>
                 <li><a href="+62 895 1945 5205"><i class="ph ph-whatsapp-logo"></i></a></li>
